objects/amc__Rate_Card_Entry__c.object
<CustomObject>
    <fields>
        <fullName>amc__Billable_Hourly_Rate__c</fullName>
        <inlineHelpText>Identifies the Billable Hourly Rate for this Rate Card Entry</inlineHelpText>
        <label>Billable Hourly Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Cost_Hourly_Rate__c</fullName>
        <inlineHelpText>Identifies the Cost Hourly Rate for this Rate Card Entry</inlineHelpText>
        <label>Cost Hourly Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Function__c</fullName>
        <inlineHelpText>Identifies the Function of this Role, which is used for Rate Card Financials</inlineHelpText>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>amc__Function</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Rate_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the Rate Card this Rate Card Entry relates to</inlineHelpText>
        <label>Rate Card</label>
        <referenceTo>amc__Rate_Card__c</referenceTo>
        <relationshipLabel>Rate Card Entries</relationshipLabel>
        <relationshipName>Rate_Card_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Skill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the Skill this Rate Card Entry relates to</inlineHelpText>
        <label>Skill</label>
        <referenceTo>amc__Skill__c</referenceTo>
        <relationshipLabel>Rate Card Entries</relationshipLabel>
        <relationshipName>Rate_Card_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Rate Card Entry</label>
    <listViews>
        <fullName>amc__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RCE:{0000}</displayFormat>
        <label>RCE ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Card Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>